--- a/build
+++ b/build
@@ -1,7 +1,7 @@
 #!/bin/sh
 
 #core="-j7"
-core=""
+core="-j1"
 
 DATE=$(date +%Y-%m-%d)
 routersjson="./router2305.json"
@@ -511,7 +511,7 @@ buldimage() {
 			fi
 			make defconfig
 			configfix
-			make $core V=s
+			make $core || make -j1 || make -j1 V=s
 			cp ./bin/targets$model_imagepath$model_image ./images/$model_mod$END$model_ext
 			EX=$?
 			if [ $EX -ne 0 ]; then
