test R1 Plus LTS

--- a/build
+++ b/build
@@ -583,7 +583,7 @@ buldimage() {
 			fi
 			make defconfig
 			configfix
-			make $core V=s
+			make -j$(nproc) || make $core || make $core V=s
 			cp ./bin/targets$model_imagepath$model_image1 ./images/$model_mod$END$model_ext1
 			EX=$?
 			if [ $EX -ne 0 ]; then
@@ -610,7 +610,7 @@ buldimage() {
 						sed -i -e 's/# CONFIG_PACKAGE_ext-rooter16 is not set/CONFIG_PACKAGE_ext-rooter16=y/g' ./.config
 						make defconfig
 						configfix
-						make $core V=s
+						make -j$(nproc) || make $core || make $core V=s
 						cp ./bin/targets$model_imagepath$model_image1 ./images/$model_mod"-MWAN3"$END$model_ext1
 						EX=$?
 						if [ $EX -ne 0 ]; then
